// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography.P4 should render default markup when no props are passed 1`] = `
<p
  className="p4 p4--regular p4--onyx-base yTlJf"
>
  Hello world
</p>
`;

exports[`Typography.P4 should render with a custom color prop that lacks variants 1`] = `
<p
  className="p4 p4--regular p4--brand-base gHJZMK"
  color="brand"
>
  Hello world
</p>
`;

exports[`Typography.P4 should render with a custom weight prop 1`] = `
<p
  className="p4 p4--semiBold p4--onyx-base ejyOOo"
>
  Hello world
</p>
`;

exports[`Typography.P4 should render with a textTransform prop 1`] = `
<p
  className="p4 p4--regular p4--onyx-base lffFI"
>
  Hello world
</p>
`;

exports[`Typography.P4 should render with custom color and variant props 1`] = `
<p
  className="p4 p4--regular p4--accent01-dark ipKlOu"
  color="accent01"
>
  Hello world
</p>
`;

exports[`Typography.P4 should render without children 1`] = `
<p
  className="p4 p4--regular p4--onyx-base yTlJf"
/>
`;
